src/tests/snapshots/hebi__tests__native_fn_call__call_simple.snap
---
source: src/tests/native_fn_call.rs
expression: snapshot
---
# Modules:


# Input:
print simple()


# Result (success):
none

# Stdout:
test


