src/tests/snapshots/hebi__tests__native_fn_call__call_with_pos.snap
---
source: src/tests/native_fn_call.rs
expression: snapshot
---
# Modules:


# Input:
print with_pos(1)


# Result (success):
none

# Stdout:
value: 1


