src/tests/snapshots/hebi__tests__native_fn_call__call_with_pos_default.snap
---
source: src/tests/native_fn_call.rs
expression: snapshot
---
# Modules:


# Input:
print with_pos_default(1)
print with_pos_default(1, 2)


# Result (success):
none

# Stdout:
1+100=101
1+2=3


