src/tests/snapshots/hebi__tests__native_fn_call__call_with_pos_default_missing_args.snap
---
source: src/tests/native_fn_call.rs
expression: snapshot
---
# Modules:


# Input:
print with_pos_default()


# Result (error):
missing required positional params: a

# Stdout:


