src/tests/snapshots/hebi__tests__native_fn_call__call_with_pos_default_too_many_args.snap
---
source: src/tests/native_fn_call.rs
expression: snapshot
---
# Modules:


# Input:
print with_pos_default(1, 2, 3)


# Result (error):
expected at most 2 args, got 3

# Stdout:


