src/tests/snapshots/hebi__tests__native_fn_call__call_with_pos_too_many_args.snap
---
source: src/tests/native_fn_call.rs
expression: snapshot
---
# Modules:


# Input:
print with_pos(1, 2)


# Result (error):
expected at most 1 args, got 2

# Stdout:


